--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,11 @@ python:
   - "2.7"
   - "3.2"
   - "3.3"
+env:
+  - DJANGO=1.4
 # command to install dependencies
-install: "pip install -r requirements-dev.txt"
+install:
+  - "pip install django-debug-panel"
+  - "pip install -r requirements-dev.txt"
 # command to run tests
-script: nosetests
+script:  python quicktest.py tests
