--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,21 @@
 language: python
 python:
-  - "2.6"
-  - "2.7"
-  - "3.2"
-  - "3.3"
-env:
-  - DJANGO=1.4
-# command to install dependencies
+  - 2.6
+  - 2.7
+  - 3.2
+  - 3.3
 install:
-  - "pip install django-debug-panel"
-  - "pip install -r requirements-dev.txt"
-# command to run tests
-script:  python quicktest.py tests
+  - pip install django-debug-toolbar.
+  - pip install -r requirements-dev.txt
+  - pip install https://github.com/django/django/archive/${DJANGO}.zip#egg=django
+script: make test
+env:
+  - DJANGO=1.4.7
+  - DJANGO=1.5.3
+  - DJANGO=stable/1.6.x
+matrix:
+  exclude:
+    - python: 3.2
+      env: DJANGO=1.4.7
+    - python: 3.3
+      env: DJANGO=1.4.7
